fixed spacing and input adorment for password in student change-password

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -272,6 +272,10 @@ code {
   height: 100%;
 }
 
+.table-cell{
+  width: calc( 100% / 4 );
+}
+
 .table-v2-row{
   transition: .2s ease-in-out;
 }
